SGD8-731: Fixed positioning issue for subsite hero on IE11

--- a/components/31-molecules/figure/_figure.scss
+++ b/components/31-molecules/figure/_figure.scss
@@ -24,15 +24,23 @@ figure {
 
     .subsite {
       @include tablet {
+        display: flex;
         position: absolute;
         top: 0;
         right: 0;
+        align-items: center;
+        justify-content: center;
         width: span(4 wide of 12);
         max-width: 23rem;
         height: calc(100% - 1.6rem + 1px); // 1px to fix rendering issues
         margin: 0;
+        padding: $gutter-width 2rem;
         text-align: center;
         z-index: 1;
+      }
+
+      @include desktop {
+        padding: 0 2rem;
       }
 
 
@@ -40,53 +48,43 @@ figure {
         right: calc((100% - #{$bp-max-content}) / 2);
       }
 
+      &::before,
+      &::after {
+        @include tablet {
+          @include theme('background-color', 'color-primary', 'hero-background-color');
+          @include theme('border-color', 'color-primary', 'hero-background-color');
+          position: absolute;
+          left: 0;
+          width: 100%;
+          height: auto;
+          border: 1px solid;
+          content: '';
+          opacity: .94;
+          z-index: -1;
+        }
+      }
+
+      &::before {
+        @include tablet {
+          top: 0;
+          bottom: 30%;
+          border-bottom-left-radius: border-radius('radius-5');
+        }
+      }
+
+      &::after {
+        @include tablet {
+          top: 70%;
+          bottom: 0;
+          border-top-left-radius: border-radius('radius-5');
+        }
+      }
+
       .subsite-title {
         display: inline-flex;
-        position: relative;
 
         @include tablet {
-          flex-direction: column;
-          align-items: center;
-          justify-content: center;
-          width: 100%;
-          height: 100%;
-          padding: $gutter-width 2rem;
-        }
-
-        @include desktop {
-          padding: 0 2rem;
-        }
-
-        &::before,
-        &::after {
-          @include tablet {
-            @include theme('background-color', 'color-primary', 'hero-background-color');
-            @include theme('border-color', 'color-primary', 'hero-background-color');
-            position: absolute;
-            left: 0;
-            width: 100%;
-            height: auto;
-            border: 1px solid;
-            content: '';
-            opacity: .94;
-            z-index: -1;
-          }
-        }
-
-        &::before {
-          @include tablet {
-            top: 0;
-            bottom: 30%;
-            border-bottom-left-radius: border-radius('radius-5');
-          }
-        }
-
-        &::after {
-          @include tablet {
-            top: 70%;
-            bottom: 0;
-            border-top-left-radius: border-radius('radius-5');
-          }
+          display: block;
         }
       }
 
